commit b76cad571ab4d96d62e39eda20e37d86984a8588 Author: Erik Steffl <steffl@yahoo-inc.com> Date:   Wed Oct 28 12:30:14 2009 -0700
    Revert "HDFS:587 from https://issues.apache.org/jira/secure/attachment/12421243/jira.HDFS-587.branch-0.20-internal.patch"
    
    This reverts commit 1f26e0aa1d0352345ab73e62f3eac2d8c4748cc5.
    
    Conflicts:
    
    	YAHOO-CHANGES.txt
    
    Resolved YAHOO-CHANGES.txt conflict by adding YAHOO-CHANGES.txt from HEAD
    and removing HDFS-587 comment from it
    
    +++ b/YAHOO-CHANGES.txt


git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.20-security-patches@1077041 13f79535-47bb-0310-9956-ffa450edef68